--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     var jsonArray = [];
     var selectUnit = "";
 
+    var vancatUnits = [];
+    var activeUnits = [];
+    var futureUnits = [];
+
     $(function () {
 
         var unit = Bmob.Object.extend("unit");
