--- a/new.html
+++ b/new.html
@@ -250,7 +250,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="javascript:showOccupancy()">Occupancy</a></li>
                   <li><a href="javascript:showLeaseExpiration()">Lease expiration</a></li>
-                  <li><a href="javascript:showSalesCategory()">Sales category/a></li>
+                  <li><a href="javascript:showSalesCategory()">Sales category</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Other</a></li>
                        
@@ -265,7 +265,7 @@
               <div class="form-group">
                   <input id="asofdate" type="us-date">
               </div>
-              <button type="button" class="btn btn-default" onclick="#">Set</button>
+              <button type="button" class="btn btn-default" onclick="javascript:resetAnalysis()">Set</button>
             </form>
 
             </ul>
@@ -314,7 +314,7 @@
                 <h4 class="panel-title">
                   <a data-toggle="collapse" href="#properties">
                     <i class="fa fa-list-alt"></i>
-                    Properties
+                    Analysis
                   </a>
                 </h4>
               </div>
@@ -421,12 +421,25 @@
                     })
                 })]
             };
+
+            //重新加载专题图
+            function resetAnalysis() {
+                //
+                if (currAnalysis == 1) {
+                    showOccupancy();
+                }
+                else if(currAnalysis ==2){
+                    showLeaseExpiration();
+                }
+            }
+
+
             /*开始专题图样式*/
             /**
-     * 创建文本样式函数
-     * @param {ol.Feature} feature 要素
-     * @param  dom 要素样式html对象
-     */
+             * 创建文本样式函数
+             * @param {ol.Feature} feature 要素
+             * @param  dom 要素样式html对象
+             */
             var createTypeTextStyle = function (feature) {
 
 
@@ -528,7 +541,7 @@
                 var id = feature.get('id');
                 var style = null;
 
-
+                console.info(vancatUnits);
                 if (id < 0) {
                     style = new ol.style.Style({
                         stroke: new ol.style.Stroke({  //区的边界样式
@@ -552,46 +565,179 @@
                         })
                     });
                 }
-                else if (id == 152) { // 其他形状
-                    style = new ol.style.Style({
-                        stroke: new ol.style.Stroke({  //区的边界样式
-                            color: 'black',
-                            width: 0.5
-                        }),
-                        fill: new ol.style.Fill({  //区的填充样式
-                            color: 'rgba(0, 0 , 255, 0.5)'
-                        }),
-                        text: createTextStyle(feature)
-                    });
+                else {
+                    for (var i = 0; i < vancatUnits.length; i++) {
+
+                        if (id == vancatUnits[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: 'rgba(0, 0 , 255, 0.5)'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < activeUnits.length; i++) {
+
+                        if (id == activeUnits[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: 'rgba(255, 0 , 0, 0.5)'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < futureUnits.length; i++) {
+
+                        if (id == futureUnits[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: 'rgba(255, 255, 0, 0.5)'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
                 }
-                else if (id == 201) { // 其他形状
-                    style = new ol.style.Style({
-                        stroke: new ol.style.Stroke({  //区的边界样式
-                            color: 'black',
-                            width: 0.5
-                        }),
-                        fill: new ol.style.Fill({  //区的填充样式
-                            color: 'rgba(255, 0 , 0, 0.5)'
-                        }),
-                        text: createTextStyle(feature)
-                    });
-                }
-                else { // 其他形状
-                    style = new ol.style.Style({
-                        stroke: new ol.style.Stroke({  //区的边界样式
-                            color: 'black',
-                            width: 0.5
-                        }),
-                        fill: new ol.style.Fill({  //区的填充样式
-                            color: 'rgba(255, 255 ,0, 0.5)'
-                        }),
-                        text: createTextStyle(feature)
-                    });
-                }
+            
 
                 // 返回 style 数组
                 return [style];
             };
+
+            // 租约过期样式
+            var eLayerStyleFunction = function (feature, resolution) {
+                var id = feature.get('id');
+                var style = null;
+
+              //  console.info(vancatUnits);
+                if (id < 0) {
+                    style = new ol.style.Style({
+                        stroke: new ol.style.Stroke({  //区的边界样式
+                            color: 'black',
+                            width: 0.5
+                        }),
+                        fill: new ol.style.Fill({  //区的填充样式
+                            color: 'rgba(255, 255, 255, 1)'
+                        })
+
+                    });
+                }
+                else if (id == 0) {
+                    style = new ol.style.Style({
+                        stroke: new ol.style.Stroke({  //区的边界样式
+                            color: '#black',
+                            width: 0.5
+                        }),
+                        fill: new ol.style.Fill({  //区的填充样式
+                            color: 'rgba(220, 220 ,220, 1)'
+                        })
+                    });
+                }
+                else {
+                    for (var i = 0; i < uVancatUnits.length; i++) {
+
+                        if (id == uVancatUnits[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: '#FFCCCC'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < u30Units.length; i++) {
+
+                        if (id == u30Units[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: '#99CCFF'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < u3060Units.length; i++) {
+
+                        if (id == u3060Units[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: '#FFCC00'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < u6090Units.length; i++) {
+
+                        if (id == u6090Units[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: '#66CC00'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+                    for (var i = 0; i < u90Units.length; i++) {
+
+                        if (id == u90Units[i]) {
+                            style = new ol.style.Style({
+                                stroke: new ol.style.Stroke({  //区的边界样式
+                                    color: 'black',
+                                    width: 0.5
+                                }),
+                                fill: new ol.style.Fill({  //区的填充样式
+                                    color: '#FFFF99'
+                                }),
+                                text: createTextStyle(feature)
+                            });
+                        }
+                    }
+
+
+                }
+
+
+                // 返回 style 数组
+                return [style];
+            };
+
 
             /***结束专题图样式***/
 
