--- a/new.html
+++ b/new.html
@@ -619,7 +619,7 @@
                         }
                     }
                 }
-            
+                console.info([style]);
 
                 // 返回 style 数组
                 return [style];
@@ -671,9 +671,9 @@
                         }
                     }
 
-                    for (var i = 0; i < u30Units.length; i++) {
+                    for (var i = 0; i < uUnits30.length; i++) {
 
-                        if (id == u30Units[i]) {
+                        if (id == uUnits30[i]) {
                             style = new ol.style.Style({
                                 stroke: new ol.style.Stroke({  //区的边界样式
                                     color: 'black',
@@ -687,9 +687,9 @@
                         }
                     }
 
-                    for (var i = 0; i < u3060Units.length; i++) {
+                    for (var i = 0; i < uUnits3060.length; i++) {
 
-                        if (id == u3060Units[i]) {
+                        if (id == uUnits3060[i]) {
                             style = new ol.style.Style({
                                 stroke: new ol.style.Stroke({  //区的边界样式
                                     color: 'black',
@@ -703,9 +703,9 @@
                         }
                     }
 
-                    for (var i = 0; i < u6090Units.length; i++) {
+                    for (var i = 0; i < uUnits6090.length; i++) {
 
-                        if (id == u6090Units[i]) {
+                        if (id == uUnits6090[i]) {
                             style = new ol.style.Style({
                                 stroke: new ol.style.Stroke({  //区的边界样式
                                     color: 'black',
@@ -719,9 +719,9 @@
                         }
                     }
 
-                    for (var i = 0; i < u90Units.length; i++) {
+                    for (var i = 0; i < uUnits90.length; i++) {
 
-                        if (id == u90Units[i]) {
+                        if (id == uUnits90[i]) {
                             style = new ol.style.Style({
                                 stroke: new ol.style.Stroke({  //区的边界样式
                                     color: 'black',
@@ -737,7 +737,7 @@
 
 
                 }
-
+                console.info([style]);
 
                 // 返回 style 数组
                 return [style];
@@ -855,7 +855,7 @@
                     }
 
                 }
-
+                console.info([style]);
 
                 // 返回 style 数组
                 return [style];
